--- a/Index.html
+++ b/Index.html
@@ -63,6 +63,15 @@
 
         </section>
         
+        <div>
+            <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
+        </div>
     </main>
+
+    <footer>
+        feito com 
+        <img src="assets/Vector.svg" alt="heart">
+    </footer>
+
 </body>
 </html>
