--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Local Turístico</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <h1>Conheça Busan</h1>
         </header>
         <section>
-            <img src="assets/busan.jpg" alt="Cidade Busan">
+            <img src="assets/Busan.jpg" alt="Cidade Busan">
             <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo,
             desde churrascarias de primeira linha até tradicionais barracs de
             comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos 
@@ -28,19 +29,19 @@
             </div>
             
             <ol>
-                <li id="templo-haedong"></li>
-                    <h3>Templo Haedong Yonggungsa</h3>
-                    <img src="assets/Templo HY.jpg" alt="Templo Haedong Yonggungsa">
-                    <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um Lado e de belas montanhas do outro</p>
-                    <p><strong>Bom para:</strong></p>
+                <img src="assets/Templo HY.jpg" alt="Templo Haedong Yonggungsa">
+                <li id="templo-haedong">
+                <h3>Templo Haedong Yonggungsa</h3>
+                <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um Lado e de belas montanhas do outro</p>
+                <p><strong>Bom para:</strong></p>
                     <ul>
                         <li>História</li>
                     </ul>
                 </li>
 
+                <img src="assets/Templo Beomeo-sa.jpg" alt="Templo Beomeo-sa">
                 <li id="templo-beomeosa">
                     <h3>Templo Beomeo-sa</h3>
-                    <img src="assets/Templo Beomeo-sa.jpg" alt="Templo Beomeo-sa">
                     <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Disnatia Joseon.</p>
                     <p><strong>Bom para:</strong></p>
                     <ul>
@@ -48,10 +49,10 @@
                     </ul>
                 </li>
 
+                <img src="assets/ParqueYongDusan.jpg" alt="Parque YongDusan">
                 <li id="parque-yongdusan">
                     <h3>Parque YongDusan</h3>
-                    <img src="assets/ParqueYongDusan.jpg" alt="Parque YongDusan">
-                    <p>O Parque YongDusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais 80 veleiros coreanos no Exhbition Hall of World Model Boats.</p>
+                <p>O Parque YongDusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais 80 veleiros coreanos no Exhbition Hall of World Model Boats.</p>
                     <p><strong>Bom para:</strong></p>
                     <ul>
                         <li>Casais</li>
